2017-01-28  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
	Support "buffer" attribute.  Set Task attributes from Project
	Properties in init().

	* build.xml: Added "http-delete" and "http-put" targets.

2016-09-21  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/client/JSONResponseHandler.java,
	src/main/java/ball/http/client/entity/JSONEntity.java,
	src/main/java/ball/http/client/method/AnnotatedHttpPost.java:
	Allow ObjectMapper instance to be specified.

2016-09-17  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
	Removed context() method.

2016-09-16  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/client/method/AnnotatedHttpPost.java:
	Added getEntityObject() and setEntityObject(Object) to allow
	implementations to specify the underlying Object for getEntity().

2016-09-11  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/client/JSONResponseHandler.java:
	Initial writing.

	* src/main/java/ball/http/client/method/AnnotatedHttpUriRequest.java:
	Avoid infinite recursion in
	AnnotatedHttpUriRequest.getAllHeaders() implementations.

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
	In log(HttpEntity), do not call HttpEntity.writeTo(OutputStream)
	if it is not repeatable.

	* src/main/java/ball/http/annotation/processing/URISpecificationProcessor.java:
	Use URIBuilder to test URISpecification.value().

2016-09-10  Allen D. Ball  <ball@sol.local>

	* Created AnnotatedHttpUriRequest, annotaions, anotation
	processors, and subclass implementations.

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
	Refactored to provide an abstract base class for any HTTP API
	task.
	Implement HttpRequestInterceptor and HttpResponseInterceptor to
	log messages.
	Initialize Task attributes from Project Properties.

2016-08-27  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java: